--- a/client/public/style.css
+++ b/client/public/style.css
@@ -24,3 +24,15 @@ html, body {
 	height:800px;
 	background-color:blue;
 }
+
+#otherQuizzes {
+	display:flex;
+	flex-direction:column;
+	align-items:center;
+	justify-content:center;
+	width:500px;
+	height:800px;
+	border-style:solid;
+	border-width:2px;
+	border-color:purple;
+}
