Constructed modal to take tests of any existing user and submit answers.

--- a/client/public/style.css
+++ b/client/public/style.css
@@ -36,3 +36,12 @@ html, body {
 	border-width:2px;
 	border-color:purple;
 }
+
+#singleQuiz{
+	width:300px;
+	background-color: darkgrey;
+	border-style:solid;
+	border-width:2px;
+	border-color:grey;
+	border-radius: 10px;
+}
