--- a/client/public/style.css
+++ b/client/public/style.css
@@ -1,17 +1,15 @@
-html, body {
+
+#root {
+	background-image: url(./images/simon-fitall-533515-unsplash.jpg);
+	background-repeat:no-repeat;
+	background-size:cover;
 	padding:0;
 	margin:0;
 	width:100%;
 	height:100%;
-}
-
-#root {
 	display:flex;
 	flex-direction:column;
 	align-items:center;
-	border-style:solid;
-	border-width:2px;
-	border-color:red;
 	height:100%
 }
 
@@ -22,7 +20,6 @@ html, body {
 	justify-content:center;
 	width:400px;
 	height:800px;
-	background-color:blue;
 }
 
 #otherQuizzes {
@@ -45,3 +42,17 @@ html, body {
 	border-color:grey;
 	border-radius: 10px;
 }
+
+.black {
+	background-image: url(./images/benjamin-voros-575800-unsplash.jpg) !important;
+}
+.signup-btn {
+background-color: black;
+margin: 50px;
+width: 50%;
+}
+.login-btn {
+	background-color: black;
+	margin: 50px;
+	width: 50%;
+	}
