--- a/client/public/style.css
+++ b/client/public/style.css
@@ -12,6 +12,20 @@
 	align-items:center;
 	height:100%
 }
+.home-header {
+	font-family: 'Unica One', cursive;
+	font-size: 75px;
+	font-weight: 12px;
+	position: relative;
+	top: -250px;
+}
+.home-body {
+	font-family: 'Lato', sans-serif;
+	text-align: center;
+	font-size: 18px;
+	position: relative;
+	top: -250px;
+}
 
 #loginScreen {
 	display:flex;
@@ -23,15 +37,20 @@
 }
 
 #otherQuizzes {
+	
+	background-color: white;
+	margin-bottom: 5%;
+   box-shadow: 4px 4px 7px gray;
+    overflow: hidden;
+    position: relative;
+    margin-bottom: 10%;
 	display:flex;
 	flex-direction:column;
 	align-items:center;
 	justify-content:center;
 	width:500px;
 	height:800px;
-	border-style:solid;
-	border-width:2px;
-	border-color:purple;
+	opacity: 0.7;
 }
 
 #singleQuiz{
@@ -44,15 +63,21 @@
 }
 
 .black {
-	background-image: url(./images/benjamin-voros-575800-unsplash.jpg) !important;
+	background-image: url(./images/joyce-mccown-766501-unsplash.jpg) !important;
+	opacity: 0.5;
 }
 .signup-btn {
 background-color: black;
-margin: 50px;
-width: 50%;
+margin: 20px;
+width: 40%;
+position: relative;
+top: -265px;
+
 }
 .login-btn {
 	background-color: black;
-	margin: 50px;
-	width: 50%;
+	margin: 20px;
+	width: 40%;
+	position: relative;
+	top: -265px;
 	}
