--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,6 +21,8 @@ body {
   height: 400px;
   border: 1px solid grey;
   border-radius: 20px;
+  background-color: white;
+  opacity: 0.8;
 }
 .form-container h1 {
   padding: 10px;
@@ -60,7 +62,7 @@ body {
   right: 10px;
   bottom: 0;
   width: 350px;
-  border:1px solid #ccc;
+  /* border:1px solid #ccc; */
   border-radius: 20px;
   border-bottom-left-radius: 20px;
   -webkit-box-shadow: 2px 2px 39px 2px rgba(0,0,0,0.25);
@@ -101,19 +103,29 @@ body {
 .chat-header  {
   padding: 20px;
   color: white;
+  opacity: 0.8;
   margin-top: 0;
   text-align: left;
   border-bottom: 1px solid grey;
   background-color: grey;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
+  -webkit-box-shadow: inset 22px 29px 67px -35px rgba(0,0,0,0.75);
+  -moz-box-shadow: inset 22px 29px 67px -35px rgba(0,0,0,0.75);
+  box-shadow: inset 22px 29px 67px -35px rgba(0,0,0,0.75);
   text-align: center;
 }
 .message-list  {
   list-style-type: none;
+  background-color: white;
+  opacity: 0.8;
   padding: 0px 20px;
   max-height: calc(100vh - 150px);
-  margin-bottom: 35px;
+  margin-top: -8px;
+  margin-bottom: 50px;
+  -webkit-box-shadow: inset 10px -7px 30px -13px rgba(0,0,0,0.75);
+  -moz-box-shadow: inset 10px -7px 30px -13px rgba(0,0,0,0.75);
+  box-shadow: inset 10px -7px 30px -13px rgba(0,0,0,0.75);
   overflow: auto scroll;
 }
 .message-sender  {
@@ -138,7 +150,10 @@ body {
   padding-left: 2px;
   border-bottom-left-radius: 20px;
   outline-width: 0;
-  margin-left: 10px;
+  padding-left: 10px;
+  -webkit-box-shadow: inset 10px -7px 30px -13px rgba(0,0,0,0.75);
+  -moz-box-shadow: inset 10px -7px 30px -13px rgba(0,0,0,0.75);
+  box-shadow: inset 10px -7px 30px -13px rgba(0,0,0,0.75);
   /* border-radius: 15px; */
 }
 .message-submit {
@@ -148,9 +163,9 @@ body {
   font-size: 16px;
   cursor: pointer;
   border-bottom-right-radius: 20px;
-  -webkit-box-shadow: inset 23px 1px 55px -28px rgba(0,0,0,0.75);
-  -moz-box-shadow: inset 23px 1px 55px -28px rgba(0,0,0,0.75);
-  box-shadow: inset 23px 1px 55px -28px rgba(0,0,0,0.75);
+  -webkit-box-shadow: inset -24px -25px 67px -35px rgba(0,0,0,0.75);
+-moz-box-shadow: inset -24px -25px 67px -35px rgba(0,0,0,0.75);
+box-shadow: inset -24px -25px 67px -35px rgba(0,0,0,0.75);
 }
 .input-field {
   position: absolute;
@@ -169,7 +184,7 @@ body {
   color: gray;
   font-size: 12px;
   margin: 0;
-  opacity: 0.35;
+  opacity: 0.50;
   position: fixed;
 }
 .link {
