chancged backgound to black

--- a/client/public/style.css
+++ b/client/public/style.css
@@ -1,6 +1,6 @@
 
 #root {
-	background-image: url(./images/simon-fitall-533515-unsplash.jpg);
+	background: black;
 	background-repeat:no-repeat;
 	background-size:cover;
 	padding:0;
