--- a/client/public/style.css
+++ b/client/public/style.css
@@ -28,13 +28,13 @@
 	align-items:center;
 	justify-content:center;
 	width:500px;
-	height:800px;
+	min-height:300px;
 	border-style:solid;
 	border-width:2px;
 	border-color:purple;
 }
 
-#singleQuiz{
+#singleQuiz, #singleConnection{
 	width:300px;
 	background-color: darkgrey;
 	border-style:solid;
