--- a/client/public/style.css
+++ b/client/public/style.css
@@ -40,7 +40,7 @@
 /*Card in middle for the quizzes*/
 #otherQuizzes {
 	
-	background-color: rgb(226,215,211);
+	background: linear-gradient(to right, #fcf7f3, #97c3f0, #a4c6e1, #9daec4, #006b9e) ;;
 	margin-bottom: 5%;
    box-shadow: 8px 8px 12px rgb(108,117,125);
     overflow: hidden;
@@ -65,17 +65,23 @@
 }
 /*navbar*/
 .navbar {
-	background-color: rgb(226,215,211);
+	background-color: rgb(108,117,125);
+}
+.navbar-title {
+	color: white;
+}
+.logout-link {
+	color: white;
 }
 
 /*hover over logout */
 .logout-link:hover {
-	background-color:rgb(108,117,125);
+	background-color:rgb(0,107,158);
 	opacity: 0.8;
 }
 /*background image on users page*/
 .black {
-	background-image: url(./images/roman-kraft-669711-unsplash.jpg) !important;
+	background-image: url(./images/jeremy-bishop-256584-unsplash.jpg) !important;
 }
 /*button to sign up*/
 .signup-btn {
@@ -84,7 +90,6 @@ margin: 20px;
 width: 40%;
 position: relative;
 top: -265px;
-
 }
 /*button to login to account*/
 .login-btn {
@@ -109,8 +114,9 @@ width: 40%;
 	position: relative;
 	margin: 20px;
 	/* width: 40%; */
-	width: 300px;
+	width: 50%;
 	height: 40px;
+	left: 100px;
 }
 /*button to check over quiz*/
 .checkit-btn {
@@ -119,8 +125,9 @@ width: 40%;
 	position: relative;
 	margin: 20px;
 	/* width: 40%; */
-	width: 300px;
+	width: 50%;
 	height: 40px;
+	left: 100px;
 }
 .exterminate-btn, .checkit-btn {
 	display:inline-block;
@@ -139,6 +146,7 @@ width: 40%;
 	margin: 12px;
     padding: 3px;
 }
+/*take quiz modal*/
 .take-quiz-question {
 	font-size: 28px;
 	margin:12px;
@@ -148,4 +156,17 @@ width: 40%;
 }
 .take-quiz-title2 {
 	text-align: center;
+}
+
+/*footer section*/
+.container-footer {
+	position:relative;
+	bottom: -850px;
+
+}
+.footer-text {
+	position:relative;
+	left:150px;
+	font-size: 24px;
+	color: white;
 }
