--- a/client/public/style.css
+++ b/client/public/style.css
@@ -53,7 +53,7 @@
 	opacity: 0.7;
 }
 
-#singleQuiz, #singleConnection{
+#singleQuiz, #singleConnection, #singleTaken{
 	width:300px;
 	background-color: darkgrey;
 	border-style:solid;
