--- a/client/public/style.css
+++ b/client/public/style.css
@@ -12,6 +12,8 @@
 	align-items:center;
 	height:100%
 }
+#userPage {
+}
 /*home page header*/
 .home-header {
 	font-family: 'Unica One', cursive;
@@ -39,43 +41,26 @@
 }
 /*Card in middle for the quizzes*/
 #otherQuizzes {
-	padding:20px;
-	background: linear-gradient(to right, #fcf7f3, #97c3f0, #a4c6e1, #9daec4, #006b9e) ;;
+	margin-top: 20px;
+	background-color: rgba(233, 231, 242, .5);
 	margin-bottom: 5%;
-   box-shadow: 8px 8px 12px rgb(108,117,125);
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     overflow: hidden;
-    position: relative;
-    margin-bottom: 10%;
 	display:flex;
 	flex-direction:column;
 	align-items:center;
 	justify-content:center;
-	/* width:500px; */
-	height:800px;
-	opacity: .94;
 }
 
-#singleQuiz, #singleConnection, #singleTaken{
-	width:300px;
-	background-color: darkgrey;
-	border-style:solid;
-	border-width:2px;
-	border-color:grey;
-	border-radius: 10px;
-	padding: 4px;
-	margin: 4.5px;
-	width: 400px;
-}
 /*navbar*/
 .navbar {
-	background-color: rgb(108,117,125);
-	width: 800px;
+	background-color: #e9e7f2;
 }
 .navbar-title {
-	color: white;
+	color: black;
 }
 .logout-link {
-	color: white;
+	color: black;
 }
 
 /*hover over logout */
@@ -83,10 +68,25 @@
 	background-color:rgb(0,107,158);
 	opacity: 0.8;
 }
+/* @keyframes color {
+	0%   { background: #7788ee; }
+	20%  { background: #1100bb; }
+	40%  { background: #a8f1f8; }
+	60%  { background: #221177; }
+	80%  { background: #6addd8; }
+	100% { background: #4422ee; }
+} */
 /*background image on users page*/
-.black {
+/* .black{
+	background: #33CCCC; /* Fallback */
+	/* animation: color 16s infinite linear;
+	text-align: center;
+	padding: 2em;
+  } */ 
+  .black {
 	background-image: url(./images/jeremy-bishop-256584-unsplash.jpg) !important;
 }
+
 /*button to sign up*/
 .signup-btn {
 background-color: black;
@@ -105,21 +105,17 @@ top: -265px;
 }
 /* button to create quiz*/
 .create-btn {
-	position: relative;
-left: 150px;
-margin: 20px;
-width: 40%;
 
 }
 /*button to exterminate quiz*/
 .exterminate-btn {
-	margin-left: 80px;
-	width: 40%;
+	margin-top: 20px;
+	width: 100%;
 }
 /*button to check over quiz*/
 .checkit-btn {
-	margin: 20px;
-	width: 40%;
+	margin-top: 20px;
+	width: 100%;
 	
 }
 .exterminate-btn, .checkit-btn {
@@ -157,16 +153,48 @@ width: 40%;
 	position:relative;
 	left: 200px;
 }
+#resultsForYou {
+	margin-top: 20px;
+	margin-left: 5%;
+	margin-bottom: 5%; 
+	background-color: rgba(233, 231, 242, .5);
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    overflow: hidden;
+	display:flex;
+	flex-direction:column;
+	align-items:center;
+	justify-content:center;
+}
+#tookYourQuiz {
+	background-color: rgba(233, 231, 242, .5);
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  	margin: 20px;
+     overflow: hidden;
+	display:flex;
+	flex-direction:column;
+	align-items:center;
+	justify-content:center;
+}
 /*footer section*/
 .container-footer {
-	position:relative;
-	bottom: -850px;
-	left: 150px;
-
+	text-align: center;
 }
 .footer-text {
-	position:relative;
-	left:150px;
 	font-size: 24px;
 	color: white;
+}
+
+#singleQuiz, #singleConnection, #singleTaken, #singleTaker{
+	width:300px;
+	padding: 5px;
+	margin: 5px;
+   background-color: rgba(233, 231, 242, .7);
+   border-style:solid;
+   border-width:2px;
+   border-color:grey;
+   border-radius: 10px;
+   opacity: none;
+}
+Button {
+background-color: white;
 }
